[package]
name = "pppm"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[dependencies]
bigint = "4.3.0"
bytes = "0.4.7"
rand = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-stdin = "0.1"
futures = "0.1"
multiaddr = "0.3"
env_logger = "0.5.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
multibase = "*"
multihash = "*"

libp2p-mplex = { path = "./rust-libp2p/mplex" }
libp2p-identify = { path = "./rust-libp2p/identify" }
libp2p-kad = { path = "./rust-libp2p/kad" }
libp2p-floodsub = { path = "./rust-libp2p/floodsub" }
libp2p-peerstore = { path = "./rust-libp2p/peerstore" }
libp2p-ping = { path = "./rust-libp2p/ping" }
libp2p-secio = { path = "./rust-libp2p/secio" }
libp2p-core = { path = "./rust-libp2p/core" }
libp2p-tcp-transport = { path = "./rust-libp2p/tcp-transport" }
libp2p-websocket = { path = "./rust-libp2p/websocket" }

[workspace]
members = [
    "rust-libp2p/multistream-select",
    "rust-libp2p/datastore",
    "rust-libp2p/example",
    "rust-libp2p/dns",
    "rust-libp2p/floodsub",
    "rust-libp2p/identify",
    "rust-libp2p/kad",
    "rust-libp2p/peerstore",
    "rust-libp2p/ping",
    "rust-libp2p/secio",
    "rust-libp2p/core",
    "rust-libp2p/tcp-transport",
    "rust-libp2p/websocket",
    "rust-libp2p/multistream-select",
    "rust-libp2p/rw-stream-sink",
    "rust-libp2p/circular-buffer",
    "rust-libp2p/varint-rs",
    "rust-libp2p/mplex",
    "rust-libp2p/ratelimit"
]

[patch.crates-io]
# TODO: Update ring and solve conflicts
"ring" = { git = "https://github.com/briansmith/ring", rev = "3a14ef619559f7d4b69e2286d49c833409eef34a" }

# Using a version of rust-multihash that compiles on emscripten
# TODO: remove once merged upstream
"multihash" = { git = "https://github.com/tomaka/rust-multihash", branch = "emscripten-hack" }
