[package]
name = "pppm"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
crust = "0.30.0"
# exonum = "0.6.0"
# iron = "0.6.0"
# bodyparser = "0.8.0"
# router = "0.6.0"
# serde = "1.0.0"
# serde_json = "1.0.0"
# serde_derive = "1.0.0"
# failure = "0.1.1"
# [dev-dependencies]
byteorder = "~1.1.0"
config_file_handler = "~0.9.0"
crossbeam = "~0.2.10"
igd = "~0.6.0"
log = "~0.3.6"
maidsafe_utilities = "~0.15.0"
mio = "~0.6.9"
net2 = "~0.2.30"
quick-error = "~1.2.0"
rand = "~0.3.15"
rust_sodium = "~0.7.0"
serde = "1.0.58"
serde_derive = "1.0.58"
serde_json = "1.0.17"
tiny-keccak = "~1.3.0"
unwrap = "~1.1.0"
get_if_addrs = "~0.4.1"
clap = "~2.25.1"
